--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*@import url(http://fonts.googleapis.com/css?family=Aldrich);*/
 
 body{
-  /*background-image: url("images/backgroundImg.jpg");*/
-  background-color: #268705;
+  background-image: url("images/mountains.jpg");
+  
 }
 
 /*.background{
@@ -12,9 +12,13 @@ body{
 .earthHead{
   text-align: center;
   font-size: 30px;
-  border: 1px solid black;
+  border: 2px solid black;
   box-shadow: 10px 10px 5px black;
   background-color: white;
+  border-radius: 20px;
+  background-color: transparent;
+  color: silver ;
+  text-indent: 20px;
 }
 
 
@@ -39,9 +43,14 @@ body{
     transition: width 0.8s ease;
 
   }
+  .donateButton{
+    background-color: silver;
+   
+
+  }
  
 
- 
+
 
 
 
