--- a/style.css
+++ b/style.css
@@ -23,8 +23,11 @@ body{
   text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
-  margin: 20px auto;
+  margin: 20px 0px 90px 0px;
   padding: 20px 50px;
+}
+.intro{
+  
 }
 
 
@@ -69,15 +72,16 @@ body{
   text-align: center;
   font-size: 22px;
   border: 2px solid white;
-  border-radius: 20px;
+  
   background-color: white;
-  opacity: 0.9;
+  opacity: 0.92;
   filter: alpha(opacity=80);
   color: black;
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
   overflow: hidden;
-  margin: 0px 2px 0px 20px;
+  margin: 10px 2px 20px 0px;
+
   
  
   }
@@ -85,7 +89,7 @@ body{
   .bar{
     font-family: 'Indie Flower', cursive;
     color: black;
-    font-size: 30px;
+    font-size: 33px;
     text-align: center;
     display: inline-block;
   }
@@ -106,3 +110,38 @@ body{
 
   }
 
+.donateButton2{
+  color: black;
+   font-family: bold;
+   font-size: 22px;
+   background-color: white;
+}
+
+.about{
+  background:white;
+  text-align: center;
+  font-size: 32px;
+  border: 2px solid white;
+  
+  background-color: white;
+  text-indent: 20px; 
+  color: black;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+  font-family: 'Open Sans', sans-serif;
+ /* display: inline-block;*/
+  margin: 5px 0px 0px 0px;
+  padding: 20px;
+  opacity: 0.92;
+  filter: alpha(opacity=80);
+}
+
+.ptag{
+  margin-top: 0px;
+  padding:20px;
+  color: black;
+  font-size: 22px;
+  background-color: white;
+  font-family: 'Open Sans', sans-serif;
+  opacity: 0.92;
+  filter: alpha(opacity=80);
+}
