--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
   overflow: hidden;
-  margin: 10px 2px 20px 0px;
+  margin: 10px 2px 5px 0px;
 
   
  
@@ -117,31 +117,12 @@ body{
    background-color: white;
 }
 
-.about{
-  background:white;
-  text-align: center;
-  font-size: 32px;
-  border: 2px solid white;
-  
-  background-color: white;
-  text-indent: 20px; 
-  color: black;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-  font-family: 'Open Sans', sans-serif;
- /* display: inline-block;*/
-  margin: 5px 0px 0px 0px;
-  padding: 20px;
-  opacity: 0.92;
-  filter: alpha(opacity=80);
-}
 
 .ptag{
-  margin-top: 0px;
-  padding:20px;
-  color: black;
+   background-image: url("images/kids.jpg");
+  color: white;
   font-size: 22px;
   background-color: white;
   font-family: 'Open Sans', sans-serif;
-  opacity: 0.92;
-  filter: alpha(opacity=80);
+  
 }
