--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*@import url(http://fonts.googleapis.com/css?family=Aldrich);*/
 
 body{
-  background-image: url("images/mountains.jpg");
+  background-image: url("images/kids.jpg");
   text-align: center;
   font-size: 14px;
   color: #333;
@@ -23,7 +23,7 @@ body{
   text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
-  margin: 20px 0px 90px 0px;
+  margin: 20px 0px 60px 0px;
   padding: 20px 50px;
 }
 
@@ -32,14 +32,14 @@ body{
  .progress{
     position:relative;
     display: block;
-    width:560px;
+    width:300px;
     height: 30px;
     border-bottom: 1px solid rgba(255,255,255,0.25);
     border-radius: 16px;
-    margin: 40px auto;
+    
     color: black;
     background-color: gray;
-    margin:40px auto;
+    margin:9px 0px 0px 0px;
    overflow: hidden;
    text-align: center;
 }
@@ -70,7 +70,7 @@ body{
   text-align: center;
   font-size: 22px;
   border: 2px solid white;
-  
+  border-radius: 20px;
   background-color: white;
   opacity: 0.92;
   filter: alpha(opacity=80);
@@ -78,16 +78,16 @@ body{
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
   overflow: hidden;
-  margin: 10px 2px 5px 0px;
+  margin: 10px 30px 5px 30px;
 
   
  
   }
 
   .bar{
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Open Sans', sans-serif;
     color: black;
-    font-size: 33px;
+    font-size: 27px;
     text-align: center;
     display: inline-block;
   }
