--- a/style.css
+++ b/style.css
@@ -113,14 +113,45 @@ body{
 .mission {
   
  text-align: center;
-  font-size: 79px;
+  font-size: 53px;
   border: 2px solid white;
-  background-color: white;
+  background-color: black;
   text-indent: 20px; 
-  color: black;
+  color: white;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   font-family: 'Open Sans', sans-serif;
-  margin: -45px 0px 60px 0px;
+  margin: -45px 0px 0px 0px;
   padding: 20px 50px;
 }
 
+.aboutUs{
+  text-align: center;
+  font-size: 17px;
+  background-color: black;
+  text-indent: 20px; 
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0px 0px 0px 0px;
+  padding: 20px 50px;
+}
+
+.why{
+  text-align: center;
+  font-size: 36px;
+  background-color: white;
+  
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0px 0px 0px 0px;
+  padding: 20px 0px;
+}
+
+.who{
+  text-align: center;
+  font-size: 17px;
+  background-color: white;
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 50px;
+}
