--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
   background-color: transparent;
   text-indent: 20px; 
   color: white;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
   margin: 20px 0px 60px 0px;
@@ -114,14 +114,13 @@ body{
   
  text-align: center;
   font-size: 53px;
-  border: 2px solid white;
   background-color: black;
   text-indent: 20px; 
   color: white;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
   font-family: 'Open Sans', sans-serif;
   margin: -45px 0px 0px 0px;
-  padding: 20px 50px;
+  padding: 10px 50px;
 }
 
 .aboutUs{
@@ -153,5 +152,5 @@ body{
   color: black;
   font-family: 'Open Sans', sans-serif;
   margin: 0px 0px 0px 0px;
-  padding: 0px 50px;
+  padding: 0px 50px 10px;
 }
