--- a/style.css
+++ b/style.css
@@ -14,15 +14,15 @@ body{
   background-image: url("images/backgroundImg.jpg");
 }*/
 
-.earthHead {
+#earthHead {
   text-align: center;
   font-size: 79px;
-  border: 2px solid white;
-  border-radius: 20px;
+  /*border: 2px solid white;
+  border-radius: 20px;*/
   background-color: transparent;
   text-indent: 20px; 
   color: white;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
   margin: 20px 0px 60px 0px;
@@ -129,7 +129,7 @@ body{
   background-color: black;
   text-indent: 20px; 
   color: white;
-  font-family: 'Open Sans', sans-serif;
+ font-family: 'Questrial', sans-serif;
   margin: 0px 0px 0px 0px;
   padding: 20px 50px;
 }
@@ -137,10 +137,10 @@ body{
 .why{
   text-align: center;
   font-size: 36px;
-  background-color: white;
+  background-color: black;
   
-  color: black;
-  font-family: 'Open Sans', sans-serif;
+  color: white;
+  font-family: 'Questrial', sans-serif;
   margin: 0px 0px 0px 0px;
   padding: 20px 0px;
 }
@@ -148,9 +148,38 @@ body{
 .who{
   text-align: center;
   font-size: 17px;
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
+ font-family: 'Questrial', sans-serif;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 50px 30px;
+}
+
+.list{
+  text-align: center;
+  font-size: 17px;
+  background-color: black;
+  color: white;
   font-family: 'Open Sans', sans-serif;
   margin: 0px 0px 0px 0px;
-  padding: 0px 50px 10px;
+  padding: 90px 50px 100px;
+}
+
+.donateTo{
+  background-color: black;
+  padding:0px 0px 20px;
+}
+.donate{
+  text-align: center;
+
+    font-size: 21px;
+    border: 2px solid white;
+    color: black;
+    text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+    font-family: 'Indie Flower', cursive;
+    display: inline-block;
+    margin: 30px;
+    padding:10px 20px 0px 20px;
+    background-color: white;
+    border-radius: 16px;
 }
