--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   margin: -45px 0px 0px 0px;
   padding: 10px 50px;
+ 
 }
 
 .aboutUs{
@@ -133,6 +134,7 @@ body{
   font-family: 'Questrial', sans-serif;
   margin: 0px 0px 0px 0px;
   padding: 20px 0px 5px;
+  border-bottom: solid white 1px;
 }
 
 .who{
@@ -171,7 +173,7 @@ body{
   padding:0px 20px 0px 20px;
   background-color: white;
   border-radius: 20px;
-
+}
 
 .contact{
   background-color: black;
