--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body{
   font-family: 'Open Sans', sans-serif;
   display: inline-block;
   overflow: hidden;
+  padding-top: 10px;
   margin: 10px 30px 300px 30px;
  }
 
